Turn on warn_return_any in mypy

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,7 @@
 [mypy]
 check_untyped_defs = True
 disallow_any_generics = True
+warn_return_any = True
 
 [mypy-graphviz]
 ignore_missing_imports = True
