--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
--   repo: https://github.com/python/black
-    rev: stable
+-   repo: https://github.com/psf/black
+    rev: 19.3b0
     hooks:
     - id: black
       language_version: python3.6
