--- a/mypy.ini
+++ b/mypy.ini
@@ -10,6 +10,7 @@ no_implicit_optional = True
 warn_redundant_casts = True
 warn_return_any = True
 warn_unused_ignores = True
+mypy_path = stubs
 
 [mypy-graphviz]
 ignore_missing_imports = True
