Remove m2c.py symlink; Remove deprecated CLI flags

--- a/mypy.ini
+++ b/mypy.ini
@@ -11,7 +11,7 @@ warn_redundant_casts = True
 warn_return_any = True
 warn_unused_ignores = True
 mypy_path = stubs
-files = mips_to_c.py, run_tests.py, tests/add_test.py
+files = m2c.py, run_tests.py, tests/add_test.py
 
 [mypy-graphviz]
 ignore_missing_imports = True
