--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,10 +19,13 @@ jobs:
         python-version: 3.6
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade mypy dataclasses types-dataclasses pycparser coverage
+        python -m pip install --upgrade mypy dataclasses types-dataclasses pycparser coverage black==22.3.0
     - name: Run tests
       run: |
         ./run_tests.py
     - name: Type-check
       run: |
         mypy
+    - name: Formatting check
+      run: |
+        black --check .
