--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,13 +13,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.6
+    - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
-        python-version: 3.6
+        python-version: 3.7
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade mypy dataclasses types-dataclasses pycparser coverage black==22.3.0
+        python -m pip install --upgrade mypy pycparser coverage black==22.3.0
     - name: Run tests
       run: |
         ./run_tests.py
