--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,13 @@ packages = [{include = "m2c"}]
 [tool.poetry.dependencies]
 python = "^3.7"
 pycparser = "^2.21"
+graphviz = {version = "^0.20.1", optional = true}
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^2.20.0"
+mypy = "^0.991"
+coverage = "^7.0.0"
+black = "22.3.0"
 
 [build-system]
 requires = ["poetry-core"]
