--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ packages = [{include = "m2c"}]
 [tool.poetry.dependencies]
 python = "^3.7"
 pycparser = "^2.21"
-graphviz = {version = "^0.20.1", optional = true}
+graphviz = "^0.20.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
