mypy allow_redefinition

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
 check_untyped_defs = True
+allow_redefinition = True
 disallow_any_generics = True
 disallow_incomplete_defs = True
 disallow_subclassing_any = True
