Add unit test for parse_suffix

--- a/mypy.ini
+++ b/mypy.ini
@@ -12,7 +12,7 @@ warn_redundant_casts = True
 warn_return_any = True
 warn_unused_ignores = True
 mypy_path = stubs
-files = m2c.py, run_tests.py, tests/add_test.py
+files = m2c.py, run_tests.py, tests/add_test.py, tests/unit
 
 [mypy-graphviz]
 ignore_missing_imports = True
