--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,14 +11,13 @@ authors = [
 license = "GPL-3.0-only"
 readme = "README.md"
 repository = "https://github.com/matt-kempster/m2c"
-packages = [{include = "m2c"}]
+packages = [{include = "m2c"}, {include = "m2c_pycparser"}]
 
 [tool.poetry.scripts]
 m2c = "m2c.main:main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pycparser = "^2.21"
 graphviz = "^0.20.1"
 
 [tool.poetry.group.dev.dependencies]
@@ -26,6 +25,9 @@ pre-commit = "^2.20.0"
 mypy = "^1.8.0"
 coverage = "^7.2.7"
 black = "24.4.2"
+
+[tool.black]
+force-exclude = "/m2c_pycparser/"
 
 [build-system]
 requires = ["poetry-core"]
