pycparser: add support for typeof

--- a/m2c_pycparser/_c_ast.cfg
+++ b/m2c_pycparser/_c_ast.cfg
@@ -183,6 +183,8 @@ Typedef: [name, quals, storage, type*]
 
 Typename: [name, quals, align, type*]
 
+Typeof: [expr*]
+
 UnaryOp: [op, expr*]
 
 # name: union tag name
