--- a/m2c_pycparser/_c_ast.cfg
+++ b/m2c_pycparser/_c_ast.cfg
@@ -61,7 +61,7 @@ Continue: []
 # init: initialization value, or None
 # bitsize: bit field size, or None
 #
-Decl: [name, quals, align, storage, funcspec, type*, init*, bitsize*]
+Decl: [name, quals, align, storage, funcspec, type*, init*, bitsize*, asmlabel*]
 
 DeclList: [decls**]
 
