pycparser: parse asm statements

--- a/m2c_pycparser/_c_ast.cfg
+++ b/m2c_pycparser/_c_ast.cfg
@@ -21,6 +21,10 @@ ArrayDecl: [type*, dim*, dim_quals]
 
 ArrayRef: [name*, subscript*]
 
+Asm: [quals, asm*, output_operands**, input_operands**, clobbers**, gotos]
+
+AsmOperand: [symbolic_name, constraint*, expr*]
+
 # op: =, +=, /= etc.
 #
 Assignment: [op, lvalue*, rvalue*]
