pycparser: parse 'case 1 ... 2:' and '{[1 ... 2] = ...}'

--- a/m2c_pycparser/_c_ast.cfg
+++ b/m2c_pycparser/_c_ast.cfg
@@ -156,6 +156,9 @@ ParamList: [params**]
 
 PtrDecl: [quals, type*]
 
+# GNU extension, used with `case 1 ... 2:` or `int x[] = {[1 ... 2] = 3}`
+Range: [first*, last*]
+
 Return: [expr*]
 
 StaticAssert: [cond*, message*]
