pycparser: parse 'struct __attribute__((...)) A'

--- a/m2c_pycparser/_c_ast.cfg
+++ b/m2c_pycparser/_c_ast.cfg
@@ -86,7 +86,7 @@ EmptyStatement: []
 # name: an optional ID
 # values: an EnumeratorList
 #
-Enum: [name, values*]
+Enum: [name, gcc_attributes**, values*]
 
 # A name/value pair for enumeration values
 #
@@ -127,6 +127,10 @@ FuncDecl: [args*, type*]
 #
 FuncDef: [decl*, param_decls**, body*]
 
+# __attribute__((name(args...))), or __attribute__((name)) if
+# args is None
+GccAttribute: [name, args**]
+
 Goto: [name]
 
 ID: [name]
@@ -166,7 +170,7 @@ StaticAssert: [cond*, message*]
 # name: struct tag name
 # decls: declaration of members
 #
-Struct: [name, decls**]
+Struct: [name, gcc_attributes**, decls**]
 
 # type: . or ->
 # name.field or name->field
@@ -197,7 +201,7 @@ UnaryOp: [op, expr*]
 # name: union tag name
 # decls: declaration of members
 #
-Union: [name, decls**]
+Union: [name, gcc_attributes**, decls**]
 
 While: [cond*, stmt*]
 
