pycparser: parse '__attribute__((...)) int x'

--- a/m2c_pycparser/_c_ast.cfg
+++ b/m2c_pycparser/_c_ast.cfg
@@ -65,7 +65,7 @@ Continue: []
 # init: initialization value, or None
 # bitsize: bit field size, or None
 #
-Decl: [name, quals, align, storage, funcspec, type*, init*, bitsize*, asmlabel*]
+Decl: [name, quals, align, storage, funcspec, gcc_attributes**, type*, init*, bitsize*, asmlabel*]
 
 DeclList: [decls**]
 
@@ -190,9 +190,9 @@ TypeDecl: [declname, quals, align, type*]
 # A typedef declaration.
 # Very similar to Decl, but without some attributes
 #
-Typedef: [name, quals, storage, type*]
+Typedef: [name, quals, storage, gcc_attributes**, type*]
 
-Typename: [name, quals, align, type*]
+Typename: [name, quals, align, gcc_attributes**, type*]
 
 Typeof: [expr*]
 
