pycparser: parse '__attribute__((...) ;'

--- a/m2c_pycparser/_c_ast.cfg
+++ b/m2c_pycparser/_c_ast.cfg
@@ -131,6 +131,8 @@ FuncDef: [decl*, param_decls**, body*]
 # args is None
 GccAttribute: [name, args**]
 
+GccAttributeStatement: [attrs**]
+
 Goto: [name]
 
 ID: [name]
