pycparser: parse 'enum A { x __attribute((...)) }'

--- a/m2c_pycparser/_c_ast.cfg
+++ b/m2c_pycparser/_c_ast.cfg
@@ -90,7 +90,7 @@ Enum: [name, gcc_attributes**, values*]
 
 # A name/value pair for enumeration values
 #
-Enumerator: [name, value*]
+Enumerator: [name, gcc_attributes, value*]
 
 # A list of enumerators
 #
