--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,40 @@
-[tool.poetry]
+[project]
 name = "m2c"
 version = "0.1.0"
 description = "MIPS, ARM and PowerPC decompiler"
+maintainers = [
+    {name = "Simon Lindholm", email = "simon.lindholm10@gmail.com"},
+]
 authors = [
-    "Matt Kempster <kidpixel@gmail.com>",
-    "Simon Lindholm <simon.lindholm10@gmail.com>",
-    "Zach Banks <zjbanks@gmail.com>"
+    {name = "Matt Kempster", email = "kidpixel@gmail.com"},
+    {name = "Zach Banks", email = "zjbanks@gmail.com"},
 ]
 license = "GPL-3.0-only"
 readme = "README.md"
-repository = "https://github.com/matt-kempster/m2c"
-packages = [{include = "m2c"}, {include = "m2c_pycparser"}]
+dependencies = [
+    "graphviz ~= 0.20.1",
+]
+requires-python = ">= 3.8"
 
-[tool.poetry.scripts]
+[project.urls]
+repository = "https://github.com/matt-kempster/m2c"
+
+[project.scripts]
 m2c = "m2c.main:main"
+
+[dependency-groups]
+dev = [
+	"pre-commit ~= 2.21",
+	"mypy ~= 1.10",
+	"coverage ~= 7.5",
+	"black == 24.4.2",
+]
+
+[tool.poetry]
+packages = [{include = "m2c"}, {include = "m2c_pycparser"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-graphviz = "^0.20.1"
-
-[tool.poetry.group.dev.dependencies]
-pre-commit = "^2.20.0"
-mypy = "^1.8.0"
-coverage = "^7.2.7"
-black = "24.4.2"
 
 [tool.black]
 force-exclude = "/m2c_pycparser/"
